--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       ddl-auto: false
       default_batch_fetch_size: 20
  datasource:
-   url: jdbc:mysql://rm-bp1p3t174nt16i896ko.mysql.rds.aliyuncs.com:9876/cinema?useUnicode=true&characterEncoding=utf-8&useSSL=false
+   url: jdbc:mysql://sh-cynosdbmysql-grp-jirpafw2.sql.tencentcdb.com:25255/cinema?useUnicode=true&characterEncoding=utf-8&useSSL=false
    username: dev
    password: Wyfdgg72
    driver-class-name: com.mysql.cj.jdbc.Driver
